<resources>
    <string name="app_name">FoodApp</string>
    <string name="title">Foodienator</string>
    <string name="mainActivityDescription">Order your favorite meals \n Here!!!</string>
    <string name="mainActivityBtnText">Go to the second Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_place">Work Place</string>
    <string name="choose">Choose your preferred meal</string>
    <string name="cost">1500.00</string>
    <string name="egg_paprica">Egg Paprica</string>
    <string name="foodNAme">Beef Burger</string>
    <string name="about_this_product">About this Product</string>
    <string name="crunchy_beef_burger_n_with_onion_and_lettuce">Crunchy beef burger\n with onion and lettuce</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="_25_minutes">25 minutes</string>
    <string name="buy_now">Buy Now</string>
    <string name="link">Enter link if the image view</string>
    <string name="you_can_enter_description">You can enter description</string>
    <string name="enter_name_of_the_food">Enter name of the food</string>
    <string name="delete">Delete</string>
    <string name="save">Save food</string>
    <string name="price">Enter price of your food</string>
    <string name="basket">Add To Basket</string>
    <string name="spicy">Spicy grilled beef \n with special seasoning</string>
    <string name="beef">Grilled Beef</string>
</resources>