<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
>

    <androidx.cardview.widget.CardView
        android:id="@+id/itemCard"
        android:layout_margin="10dp"
        android:layout_width="165dp"
        android:layout_height="230dp"
        android:backgroundTint="@color/light_gray"
        app:cardCornerRadius="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="75dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_1"/>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="21dp"
            android:layout_height="16.6dp"
            android:layout_gravity="end"
            android:layout_margin="13dp"
            android:src="@drawable/vector_7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/foodNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/egg_paprica"
                android:textColor="@color/highGray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/naira" />


                <TextView
                    android:id="@+id/foodPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost"
                    android:textColor="@color/green" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/deleteFoodBtm"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/itemCard"
        app:layout_constraintStart_toStartOf="@+id/itemCard"
        app:layout_constraintTop_toBottomOf="@+id/itemCard" />

</androidx.constraintlayout.widget.ConstraintLayout>